--- a/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
+++ b/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
@@ -37,13 +37,13 @@
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        <!-- SIB Aggregator added on 24th of November asked by Heinz -->
-        ga('create', 'UA-87958702-1', 'auto', 'sibagg', { 'allowLinker': true });
-        ga('sibagg.send', 'pageview');
+        ga('create', 'UA-17852148-1', 'auto');
+        ga('send', 'pageview');
 
     </script>
+
 </head>
 
 <body ng-clock="" class="preview fill ng-scope" data-spy="scroll" data-target=".subnav" data-offset="90" ng-controller="SearchCtrl" np-background="#main">
