--- a/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
+++ b/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
@@ -241,10 +241,21 @@
                 <div class="col-xs-12 col-lg-12  main ng-scope" ng-controller="DocCtrl" style="background-color:white">
                 <p id="news-centre-content" class="ng-scope">
                     <p>The neXtProt SPARQL endpoint is accessible at: <a href="https://sparql.nexptrot.org">https://sparql.nexptrot.org</a>.<br>
-                    We recommend our new users to start looking at our <a href="https://www.nextprot.org/proteins/search?mode=advanced"> examples</a> together with our <a href="https://snorql.nextprot.org/help/doc/introduction">data model.</a></p>
-                    We are aware that those queries may be difficult to create, therefore don't hesitate to contact us if you need help!<br>
-                    Look also at <a href="https://www.nextprot.org/help/advanced-search">this doc</a> to know how to save your queries in your profile.<br>
-                    We also provide a more advanced interface accessible at <a href="https://snorql.nextprot.org">https://snorql.nextprot.org</a> that allows user to search in different axes (SPARQL queries can also be saved in this environment).<br>
+                    We recommend our new users to start looking at our <a href="https://www.nextprot.org/proteins/search?mode=advanced"> examples queries</a> together with our <a href="https://snorql.nextprot.org/help/doc/introduction">data model.</a></p>
+                    We are aware that those queries may be difficult to create, therefore don't hesitate to contact us if you need help and <a href="https://www.nextprot.org/help/advanced-search">save them in your profile</a> for future use.<br>
+                    We also provide a more advanced interface accessible at <a href="https://snorql.nextprot.org">https://snorql.nextprot.org</a> that allows user to search all aspects of the data. .<br>
+
+                    <pre>
+                        <code>
+Examples:
+NXQ_00124 - What are the 10 most frequent families with member count
+NXQ_00126 - Peptides that are potential neo N-termini from undescribed isoforms
+NXQ_00148 - Variants with normal "ubiquitin-protein transferase activity" and decreased or increased binding to UBE2D1 (example: BRCA1-p.Ile89Thr)
+                        </code>
+                    </pre>
+
+
+                    SPARQL queries can also be saved in the snorql.nextprot.org environment.<br>
                     You may want to have a look also at the presentation <a href="https://github.com/calipho-sib/sparql-playground/blob/master/assets/lausanne2016-sparql-nextprot.pdf">Practical Introduction to SPARQL</a> and play with the <a href="http://sparql-playground.sib.swiss/">The SPARQL playground</a>.
                 </p>
                 <a href="https://snorql.nextprot.org/help/doc/introduction">
