fixing english in sparql page

--- a/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
+++ b/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
@@ -247,7 +247,7 @@
                             <img width="20%" src="https://raw.githubusercontent.com/calipho-sib/nextprot-docs/master/pages/assets/rdf-model.png"/>
                         </a>
                     </div>
-                    You can start with simple queries, such as the ones presented below and modify certain CV terms:
+                    You can start with simple queries, such as the ones presented below and modify some CV terms:
                     <ul>
                         <li><a href="https://www.nextprot.org/proteins/search?mode=advanced&queryId=NXQ_00001">NXQ_00001 - Proteins phosphorylated and located in the cytoplasm</a></li>
                         <li><a href="https://www.nextprot.org/proteins/search?mode=advanced&queryId=NXQ_00004">NXQ_00004 - Proteins highly expressed in brain but not expressed in testis</a></li>
