adding disable programmatic access header

--- a/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
+++ b/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
@@ -94,6 +94,7 @@
 <!--                            <li ng-class=""><a href="#" ng-click="routingOutside('snorql')" style="cursor:not-allowed">BLAST</a></li>-->
                             <li ng-class=""><a href="/tools/unicity-checker" ng-click="routingOutside('snorql')">Peptide unicity checker</a></li>
                             <li class="divider"></li>
+                            <li class="disabled" style="font-size:12px; margin-left: 10px"><i>Programmatic access</i></li>
                             <li ng-class=""><a ng-href="https://api.nextprot.org" href="https://api.nextprot.org">API</a></li>
                             <li ng-class=""><a ng-href="https://sparql.nextprot.org" href="https://sparql.nextprot.org">SPARQL</a></li>
                             <li ng-class=""><a ng-href="http://snorql.nextprot.org" href="http://snorql.nextprot.org">SNORQL search</a></li>
