--- a/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
+++ b/web/src/main/webapp/WEB-INF/html/welcome-sparql-page.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="nextprot,UniProt,Human,Proteins,Proteome,Proteomics,protein database,protein knowledgebase,protein resource,human protein,human proteome,cancer variants portal,ion channels variants portal,function,medical,disease,expression,interactions,sequence,isoform,mutation,variant,phenotypes,proteomics,peptide,structure,3D,unicity checker,annotation,biocuration,chromosomes,protein validation,protein-coding genes,post-translational modifications,ptm,data integration,systems biology,genetic variations,RDF data model,SPARQL endpoint,api,rest">
 
     <!--    <meta name="description" content="A knowledge platform on human proteins. It strives to be a comprehensive resource that provides a variety of types of information on human proteins.">-->
-    <meta name="description" content="The neXtProt SPARQL endpoint is accessible at: https://sparql.nexptrot.org">
+    <meta name="description" content="The neXtProt SPARQL endpoint is accessible at: https://sparql.nextprot.org">
     <meta name="author" content="CALIPHO Team - SIB - Swiss Institute of Bioinformatics">
     <meta name="fragment" content="!">
     <meta http-equiv="expires" content="0">
